Added signin/manage page

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,8 @@
                             <a href="{{ url_for('main.index') }}" class="navbar-item">
                                 Home
                             </a>
-                            <a href="{{ url_for('main.profile') }}" class="navbar-item">
-                                Profile
+                            <a href="{{ url_for('main.manage') }}" class="navbar-item">
+                                Manage
                             </a>
                             <a href="{{ url_for('auth.login') }}" class="navbar-item">
                                 Login
