--- a/templates/manage.html
+++ b/templates/manage.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1 class="title">
-  Welcome, {{ name }}!
+  You currently have $ {{ balance }}!
 </h1>
 
 <div class="column is-4 is-offset-4">
