all bank features are implemented

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   Bank of Trojans
 </h1>
 <h2 class="subtitle">
-  Easy authentication and authorization in Flask.
+  The only bank where you can deposit money without a check/pile of cash/money order
 </h2>
 {% endblock %}
 
