--- a/templates/login.html
+++ b/templates/login.html
@@ -14,13 +14,13 @@
         <form method="GET" action="/login">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="email" name="email" placeholder="Your Email" autofocus="">
+                    <input class="input is-large" type="email" name="user" placeholder="Your account Name" autofocus="">
                 </div>
             </div>
 
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Your Password">
+                    <input class="input is-large" type="password" name="pass" placeholder="Your Password">
                 </div>
             </div>
             <div class="field">
