--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,13 +14,13 @@
         <form method="GET" action="/signup">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="email" name="email" placeholder="Email" autofocus="">
+                    <input class="input is-large" type="email" name="user" placeholder="Account Name" autofocus="">
                 </div>
             </div>
 
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Password">
+                    <input class="input is-large" type="password" name="pass" placeholder="Password">
                 </div>
             </div>
 
