--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
             </div>
         {% endif %}
         {% endwith %}
-        <form method="GET" action="/signup">
+        <form method="GET" action="/register">
             <div class="field">
                 <div class="control">
                     <input class="input is-large" type="email" name="user" placeholder="Account Name" autofocus="">
