--- a/templates/reset.html
+++ b/templates/reset.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="column is-4 is-offset-4">
-    <h3 class="title">Login</h3>
+    <h3 class="title">Reset Password</h3>
     <div class="box">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -14,18 +14,7 @@
         <form method="GET" action="/reset">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="email" name="user" placeholder="Your username" autofocus="">
-                </div>
-            </div>
-
-            <div class="field">
-                <div class="control">
                     <input class="input is-large" type="password" name="pass" placeholder="New Password">
-                </div>
-            </div>
-            <div class="field">
-                <div class="control">
-                    <input class="input is-large" type="password" name="pass" placeholder="Confirm New Password">
                 </div>
             </div>
             <div class="field">
@@ -34,7 +23,8 @@
                     Remember me
                 </label>
             </div>
-            <button class="button is-block is-info is-large is-fullwidth">Login</button>
+            <input type='hidden' name='email' value= '{{ email }}' />
+            <button class="button is-block is-info is-large is-fullwidth">Reset Password</button>
         </form>
     </div>
 </div>
