--- a/templates/register.html
+++ b/templates/register.html
@@ -7,20 +7,24 @@
         {% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="notification is-danger">
-                {{ messages[0] }}. Go to <a href="{{ url_for('auth.login') }}">login page</a>.
+                {{ messages[0] }}
             </div>
         {% endif %}
         {% endwith %}
         <form method="GET" action="/register">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="email" name="user" placeholder="Account Name" autofocus="">
+                    <input class="input is-large" type="email" name="user" placeholder="Username" autofocus="">
                 </div>
             </div>
-
             <div class="field">
                 <div class="control">
                     <input class="input is-large" type="password" name="pass" placeholder="Password">
+                </div>
+            </div>
+            <div class="field">
+                <div class="control">
+                    <input class="input is-large" type="password" name="confirm-pass" placeholder="Confirm Password">
                 </div>
             </div>
 
