wrote down policy

--- a/templates/reset.html
+++ b/templates/reset.html
@@ -22,6 +22,8 @@
                     <input class="input is-large" type="password" name="confirm-pass" placeholder="Confirm Password">
                 </div>
             </div>
+            <p>Password must be minimum eight characters long, with at least one upper case English letter, one lower case English letter, one number and one special character</p>
+            
             <input type='hidden' name='email' value= '{{ email }}' />
             <button class="button is-block is-info is-large is-fullwidth">Reset Password</button>
         </form>
