Fixed viewable password policy

--- a/templates/register.html
+++ b/templates/register.html
@@ -17,6 +17,7 @@
                     <input class="input is-large" type="email" name="user" placeholder="Username" autofocus="">
                 </div>
             </div>
+            <p>Password must be minimum eight characters long, with at least one upper case English letter, one lower case English letter, one number and one special character</p>
             <div class="field">
                 <div class="control">
                     <input class="input is-large" type="password" name="pass" placeholder="Password">
