--- a/templates/register.html
+++ b/templates/register.html
@@ -27,7 +27,7 @@
                     <input class="input is-large" type="password" name="confirm-pass" placeholder="Confirm Password">
                 </div>
             </div>
-            <p>Password must be minimum eight characters long, with at least one upper case English letter, one lower case English letter, one number and one special character</p>
+            <p style="color: grey; margin-bottom: 10px">Password must be minimum eight characters long, with at least one upper case English letter, one lower case English letter, one number and one special character.</p>
             <button class="button is-block is-info is-large is-fullwidth">Sign Up</button>
         </form>
     </div>
