--- a/templates/reset.html
+++ b/templates/reset.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <input type='hidden' name='email' value= '{{ email }}' />
-            <p>Password must be minimum eight characters long, with at least one upper case English letter, one lower case English letter, one number and one special character</p>
+            <p style="color: grey; margin-bottom: 10px">Password must be minimum eight characters long, with at least one upper case English letter, one lower case English letter, one number and one special character.</p>
             <button class="button is-block is-info is-large is-fullwidth">Reset Password</button>
         </form>
     </div>
